Layout changes. Added logo images. Simplified UI.

--- a/package.json
+++ b/package.json
@@ -3,19 +3,15 @@
   "version": "0.0.2",
   "description": "Real-time chat",
   "main": "app.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
   "keywords": [
     "waffle",
     "chat"
   ],
   "author": "Catlin Buckley",
-  "license": "MIT",
   "dependencies": {
     "ejs": "^1.0.0",
-    "express": "^4.8.2",
-    "gravatar": "~1.0.6",
-    "socket.io": "^1.0.6"
+    "express": "^4.10.4",
+    "gravatar": "^1.1.0",
+    "socket.io": "^1.2.1"
   }
 }
